# This file is used to configure your project.


## Metadata section specifies information about the project
[metadata]
license = mit
license_file = license
classifiers =
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    operaying systems :: OS Independent 

    [options]
    install requires =
    ensure==1.0.2
    py-youtube = 1.1.7
    Python_requires = >=3.7


    ## Extras_require section specifies additional dependencies for testing
    [options.extras_require]
    testing =
    pytest>=7.1.3
    mypy>=0.971
    flake8>=5.0.4
    tox>=3.25.1      ## Testing automation tool and its version requirement
    black>=22.8.0

    ## Package_data section specifies additional package data
    [options.package_data]
    IPYNBrenderer = py.typed

   ## Flake8 section specifies configuration options for the Flake8 linter
    [flake8]
    max-line-length = 160
    exclude = __init__.py



